# GenAI-Assistant

./: .gitignore  README.md  app.js  app.py  chat_app.db  chat_data.db  chat_engine.py  chat_history.db  config.json  config.py  depend_mgr.py  main.py  persona.py  pyproject.toml  requirements.txt  requirements.txt 
cache/: -178432435.txt  -203565573.txt  -303175110.txt  -731217644.txt  5507607685.txt  6703363789.txt  7369525131.txt  content_index.json
data/: offline_storage.db
docs/: DETAILED_FEATURES.md  FEATURES.md  features.md
helpers/: knowledgebase.js
local/: chat app that runs dynamically on multiple API.md  models.py  sample.py
local/examples/: AISuiteDemo.ipynb  QnA_with_pdf.ipynb
routes/: files.js  upload.js
src/: __init__.py  app.py  audio.py  chat.py  client.py  config.py  content_manager.py  context.py  document_processor.py  epub_utils.py  exceptions.py  file_processor.py  file_summarizer.py  logger.py  memory.py  models.py  monitoring.py  offline.py  performance.py  persona.py  provider.py  response_handler.py  text_chunker.py  thread_manager.py  token_utils.py  ui.py  utils.py
src/config/: settings.py
src/core/: base.py  chat.py
src/database/: __init__.py  db.py  exporter.py  manager.py  models.py  storage.py
src/framework/: chat_completion_response.py  choice.py
src/provider/: deepseek_provider.py
src/providers/: anthropic_provider.py  aws_provider.py  azure_provider.py  cohere_provider.py  fireworks_provider.py  google_provider.py  groq_provider.py  huggingface_provider.py  mistral_provider.py  ollama_provider.py  xai_provider.py  (+4 more)
(+6 files in other folders)
