[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo_chat"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Add your dependencies here
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
